--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,4 +10,6 @@ dependencies = [
     "langchain>=0.3.26",
     "langchain-community>=0.3.27",
     "langchain-google-genai>=2.1.6",
+    "langchain-huggingface>=0.3.0",
+    "pypdf>=5.7.0",
 ]
